# supermemory-testing-site

./: .gitignore  README.md  README_CHATBOT.md  app.py  chatbot_app.py  general_question_analyzer.py  main.py  processor.py  pyproject.toml  test_analyzer.py
docs/: approved_ideas.docx  brand_context.docx  meta_analysis.xlsx  rejected_ideas.docx
templates/: index.html
